@@ -1,21 +1,23 @@
 #ifndef _CHESSBOARD_H_
 #define _CHESSBOARD_H_
-#include <utility>
-#include "Subject.h"
 #include "Piece.h"
 #include "Move.h"
+#include "Subject.h"
+#include <utility>
 
-
-class ChessBoard: public Subject {
+class ChessBoard : public Subject {
     private:
         Piece* board[8][8];
-    
-    public: 
+        void trySetPiece(Move move);
+        void resetMove(Move move);
+        bool isPotentialMove(Move move); 
+        
+    public:
         ~ChessBoard();
         void init(); 
         bool isPathClear(Move move);
         bool isInCheck(bool white);
-        void setup(); 
+        bool simulateMove(Move move); 
         Piece* getPiece(pair<int, int> square);
         void setPiece(pair<int, int> square, Piece* piece); 
         bool checkInDanger(); 
